--- a/frontend/cloudbuild.yaml
+++ b/frontend/cloudbuild.yaml
@@ -10,7 +10,8 @@ steps:
     - name: 'gcr.io/cloud-builders/docker'
       args: [
             'build', '--pull',
-            '--build-arg CLIENT_DIR=client/${_CLIENT_AGENT},CONTRACT_ADDRESS=${_CONTRACT_ADDRESS}',
+            '--build-arg', 'CLIENT_DIR=client/${_CLIENT_AGENT}',
+            '--build-arg', 'CONTRACT_ADDRESS=${_CONTRACT_ADDRESS}',
             '-t', '${_GCR_HOSTNAME}/$PROJECT_ID/$REPO_NAME-${_CLIENT_AGENT}-frontend:$BRANCH_NAME',
             '--cache-from', '${_GCR_HOSTNAME}/$PROJECT_ID/$REPO_NAME-${_CLIENT_AGENT}-frontend:main',
             '-f', 'builds/frontend/Dockerfile',
