simplify frontend service

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,21 +2,6 @@ FROM node:16.13.0 AS build-stage
 ARG CLIENT_DIR
 ARG CONTRACT_ADDRESS
 
-################################## Frontend ##################################
-WORKDIR /frontend
-
-# Install dev dependencies
-COPY frontend/package*.json ./
-RUN npm install --production=false
-
-# Bundle app source
-COPY frontend/server.ts ./app-src/server.ts
-
-# Build
-COPY frontend/babel.config.json ./babel.config.json
-RUN ./node_modules/.bin/babel --copy-files --extensions ".ts" ./app-src --out-dir ./app-lib
-################################## Frontend ##################################
-
 ##################################  Client  ##################################
 WORKDIR /client
 
@@ -40,19 +25,13 @@ FROM node:16.13.0
 WORKDIR /usr/src/app
 
 # Install app dependencies
-# A wildcard is used to ensure both package.json AND package-lock.json are copied
-# where available (npm@5+)
-COPY package*.json ./
-
+COPY frontend ./
 RUN npm install --production
 # If you are building your code for production
 # RUN npm ci --only=production
-
-# Add compiled frontend source
-COPY --from=build-stage /frontend/app-lib ./frontend
 
 # Add client build
 COPY --from=build-stage /client/build ./client
 ENV CLIENT_BUILD_PATH /usr/src/app/client
 
-CMD [ "node", "frontend/server.js" ]
+CMD [ "node", "server.js" ]
